<resources>
    <!--Global-->
    <string name="app_name">CalculApp</string>
    <string name="logo">Logo image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--LoadActivity-->
    <string name="content_background_girl">Girl image</string>
    <string name="content_security">Security image</string>
    <string name="securityText">100% segura</string>
    <string name="copyrightText">Copyright @ 2023 calculapp todos los derechos reservados</string>
    <string name="secondsText">%xs</string>


    <!--AboutActivity-->
    <string name="content_aboutImage">About image</string>
    <string name="content_arrowUpImage">Arrow up image</string>
    <string name="appWelcome">Bienvenido a CalculApp</string>
    <string name="appDescription">¡Proporcionando cosas esenciales para la seguridad de sus créditos!</string>
    <string name="firstAppFeature">Recibe dinero</string>
    <string name="secondAppFeature">Paga la deuda</string>
    <string name="thirdAppFeature">Explora ofertas interesantes</string>
    <string name="buttonNext">Siguiente</string>


    <!--AskCreditFragment-->
    <string name="content_diagonalArrow">Back arrow image</string>
    <string name="titleAskCredit">Calcula tu credito online</string>

    <string name="questionHowMuchMoney">¿Cuanto dinero necesitas?</string>
    <string name="initMoney">$100 000</string>
    <string name="finishMoney">$1 000 000</string>

    <string name="questionWhenPay">¿Cuando puedes pagarlo?</string>
    <string name="questionWhenPayTooltip">Tu primer plazo puede ser de hasta 30 días pero puedes solicitar ampliar el plazo 30 días más en la fecha de vencimiento de tu crédito.</string>
    <string name="initDay">5 Días</string>
    <string name="finishDay">150 Días</string>

    <string name="totalPay">Total a pagar</string>
    <string name="creditDescription">Este valor corresponde a una simulación de tu crédito según los datos seleccionados por ti.</string>
    <string name="requestsCredit">Pide tu credito</string>

    <string name="requestedAmount">Monto solicitado</string>

    <string name="interest">Intereses</string>
    <string name="interestComplement">(35% EA)</string>
    <string name="interestTooltip">El interés corriente aplicado a tu crédito es del 35%EA (Efectivo anual) sobre el capital adeudado. Esta tasa es inferior a la tasa de usura establecida por las autoridades nacionales para Septiembre 2023: 42,05% EA  Este interés se calcula diariamente por el plazo que escojas para pagar tu crédito.</string>

    <string name="guarantee">Aval</string>
    <string name="guaranteeComplement">(opcional)</string>
    <string name="guaranteeTooltip">Para el otorgamiento del crédito, debes cumplir con el requisito de constitución de un aval que garantice el cumplimiento del pago total o parcial de tu crédito. Si lo deseas, puedes contratarlo con nuestros proveedores aliados al momento de la solicitud del crédito.</string>

    <string name="guaranteeDiscount">Descuento Aval</string>
    <string name="guaranteeDiscountTooltip">En caso que desees optar por el aval opcional ofrecido por RapiCredit, podrás acceder a descuentos en su costo. Por tu buen comportamiento en el pago de tu crédito, podrás hacer efectivo descuentos en el costo total del aval.</string>

    <string name="electronicSignature">Firma electrónica</string>
    <string name="electronicSignatureComplement">(opcional)</string>
    <string name="electronicSignatureTooltip">El pago del  servicio de firma electrónica del crédito es opcional y te permite instrumentar la firma del crédito 100% en línea, ahorrándote tiempo y dinero. Este costo es realizado únicamente al momento de utilizar nuestros servicios, a través  de un cobro de $130.500, el cual podrá tener un descuento cuando realices un pago oportuno de tu crédito.</string>

    <string name="discount">Descuento</string>
    <string name="discountComplement">(por inclusión financiera)</string>
    <string name="discountTooltip">El uso de nuestra plataforma es completamente opcional, sin embargo, si deseas usarla, podrás generar descuentos por inclusión financiera por tu buen comportamiento en el pago de tus obligaciones financieras con RapiCredit. Así, RapiCredit quiere promover el uso de herramientas tecnológicas que ofrezcan productos y servicios que promuevan la inclusión financiera y el acceso al crédito de las personas.</string>

    <string name="total">Total</string>
    <string name="content_imageInfo">Info image</string>
    <string name="negativeNumber">-%s</string>


    <!--UserRegisterActivity-->
    <string name="btnLoginScreen">¿Ya eres cliente CalculApp?</string>

    <string name="amountToRequest">Monto a solicitar</string>
    <string name="payDate">Fecha de pago</string>
    <string name="edit">Editar</string>
    <string name="content_edit_image">Image edit</string>

    <string name="enterData">!Ingresa tus datos</string>
    <string name="howIdentity">como aparecen en tu cedula</string>

    <string name="content_questionScroll">Question ScrollView</string>
    <string name="questionFirstName">Primer nombre</string>
    <string name="questionSecondName">Segundo nombre (Campo opcional)</string>
    <string name="questionLastName">Primer apellido</string>
    <string name="questionSecondLastName">Segundo apellido (Campo opcional)</string>
    <string name="questionTypeDocument">Tipo de documento</string>
    <string name="questionIdentityNumber">Numero de identificacion</string>
    <string name="questionEmail">Correo electronico</string>
    <string name="questionRepeatEmail">Repetir correo electronico</string>
    <string name="questionPhoneNumber">Telefono celular</string>
    <string name="questionPassword">Crea una contraseña</string>
    <string name="questionRepeatPassword">Repetir contraseña</string>

    <string name="checkTerms">Acepto los terminos y condiciones</string>
    <string name="checkProtectionPolicy">Acepto la politica para la proteccion y tratamiento de datos personales</string>
    <string name="btnContinueText">Continuar</string>


    <!--LoginActivity-->
    <string name="logIn">!Inicia sesión</string>
    <string name="yourAccount">con tu cuenta</string>
    <string name="content_img_user_profile">User login image</string>
    <string name="enterEmail">Ingresa tu correo</string>
    <string name="enterPassword">Ingresa tu contraseña</string>
    <string name="btnLogIn">Iniciar sesion</string>


    <!--Menu-->
    <string name="home">Inicio</string>
    <string name="credit">Credito</string>
    <string name="settings">Configuracion</string>


    <!--HomeFragment-->
    <string name="greeting">Buen dia</string>
    <string name="content_logoutImage">Logout image</string>
    <string name="logOut">Salir</string>
    <string name="totalDebt">Deuda total</string>
    <string name="debtHistory">Historial de deudas</string>


    <!--DocumentType-->
    <string name="citizenshipCard">Cedula de ciudadanía</string>


    <!--UserRegisterResponse-->
    <string name="registered">Registro exitoso</string>
    <string name="errorIdentification">Numero de identificacion ya registrado</string>
    <string name="errorEmail">Correo electronico ya registrado</string>


    <!--CreditRegisterResponse-->
    <string name="creditRegistered">Credito solicitado</string>
    <string name="requestInProcess">Tienes una solicitud en proceso</string>
    <string name="currentCredit">Tienes un credito activo</string>


    <!--Badges-->
    <string name="badgeCop">COP</string>
    <string name="badgeEur">EUR</string>
    <string name="badgeMxm">MXN</string>
    <string name="badgeUsd">USD</string>


    <!--DetailCredit-->
    <string name="content_CloseImage">Close button</string>
    <string name="content_DownloadImage">Download button</string>
    <string name="detailRequestedAmount">Monto solicitado:</string>
    <string name="detailCreditTime">Tiempo de credito:</string>
    <string name="detailApplicationDate">Fecha de solicitud:</string>
    <string name="detailInterest">Intereses:</string>
    <string name="detailEndorsement">Aval:</string>
    <string name="detailEndorsementDiscount">Descuento de aval:</string>
    <string name="detailElectronicSignature">Firma electronica:</string>
    <string name="detailDiscount">Descuento:</string>
    <string name="detailTotalPay">Total a pagar:</string>
    <string name="detailButtonPay">Pagar el credito</string>
    <string name="detailButtonAccept">Aceptar</string>
    <string name="detailButtonCancel">Cancelar</string>

    <string name="daysString">%d Días</string>


    <!--DialogCloseSession-->
    <string name="questionCloseSession">¿Desea cerrar su sesion?</string>
    <string name="buttonLeave">Salir</string>
    <string name="buttonCancelTheLeave">Cancelar</string>


    <!--SettingsFragment-->
    <string name="calculator">Calculadora</string>
    <string name="differentCurrencies">Diferentes divisas</string>

    <string name="stringEuro">Euro</string>

    <string name="badge">Divisa</string>
    <string name="selectCurrency">Selecciona tu divisa</string>


</resources>