<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.about.AboutActivity">

    <ImageView
        android:id="@+id/ivAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.4"
        android:src="@drawable/img_about"
        android:contentDescription="@string/content_aboutImage"/>

    <LinearLayout
        android:id="@+id/llAppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appWelcome"
            style="@style/titleText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/appDescription"
            android:textColor="@color/primaryDark"
            android:gravity="center"
            style="@style/basicText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/green_arrow_up"
                android:contentDescription="@string/content_arrowUpImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAppFeature"
                android:textSize="21sp"
                style="@style/titleText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/green_arrow_up"
                android:contentDescription="@string/content_arrowUpImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondAppFeature"
                android:textSize="21sp"
                style="@style/titleText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/green_arrow_up"
                android:contentDescription="@string/content_arrowUpImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdAppFeature"
                android:textSize="21sp"
                style="@style/titleText"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/llAppDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/accent"
        android:text="@string/buttonNext"
        android:textColor="@color/white"
        style="@style/titleText"/>

</androidx.constraintlayout.widget.ConstraintLayout>