<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_detail_credit"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.closeaccount.CloseDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionCloseSession"
        style="@style/titleText"/>

    <Button
        android:id="@+id/btnCancelLeave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancelTheLeave"
        android:textColor="@color/accentWhite"
        android:backgroundTint="@color/accent"
        style="@style/titleText"/>

    <Button
        android:id="@+id/btnLeave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLeave"
        android:textColor="@color/accentWhite"
        android:backgroundTint="@color/secondary"
        style="@style/titleText"/>

</LinearLayout>