<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo_appname"
        android:contentDescription="@string/logo"/>

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:background="@color/secondary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:textColor="@color/white"
            android:textSize="32sp"
            style="@style/titleText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourAccount"
            android:textColor="@color/white"
            android:textSize="16sp"
            style="@style/titleText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/llToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/img_user_profile"
            android:contentDescription="@string/content_img_user_profile"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/basicTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/basicTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/accent"
            style="@style/basicTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/basicTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:backgroundTint="@color/accent"
            android:text="@string/btnLogIn"
            android:textColor="@color/white"
            style="@style/titleText"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>